--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 	<meta http-equiv="Cache-Control" content="no-cache">
 	<title>Transmission Control</title>
 	<!-- 样式表 -->
-	<link rel="stylesheet" type="text/css" href="style/base.css?v=20130106" />
-   <link rel="stylesheet" type="text/css" href="script/easyui/themes/default/easyui.css?v=20130106"/>  
-   <link rel="stylesheet" type="text/css" href="script/easyui/themes/icon.css?v=20130106"/>
+	<link rel="stylesheet" type="text/css" href="style/base.css?v=20130110.2200" />
+   <link rel="stylesheet" type="text/css" href="script/easyui/themes/default/easyui.css?v=20130110.2200"/>  
+   <link rel="stylesheet" type="text/css" href="script/easyui/themes/icon.css?v=20130110.2200"/>
 	<!-- 基础类库 -->
 	<script type="text/javascript" src="script/jquery/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="script/jquery/jquery.form.js"></script>
 	<script type="text/javascript" src="script/jquery/json2.min.js"></script>
 	<script type="text/javascript" src="script/jquery/Base64.js"></script>
-	<script type="text/javascript" src="script/easyui/jquery.easyui.min.js?v=20130106"></script>
+	<script type="text/javascript" src="script/easyui/jquery.easyui.min.js?v=20130110.2200"></script>
 	<!-- -->
 	<!-- 系统类库 -->
-	<script type="text/javascript" src="script/min/transmission.js?v=20130106"></script>
-	<script type="text/javascript" src="script/min/public.js?v=20130106"></script>
-	<script type="text/javascript" src="script/min/system.js?v=20130106"></script>
+	<script type="text/javascript" src="script/min/transmission.js?v=20130110.2200"></script>
+	<script type="text/javascript" src="script/min/public.js?v=20130110.2200"></script>
+	<script type="text/javascript" src="script/min/system.js?v=20130110.2200"></script>
 </head>
 <body>
 	<div id="main" class="easyui-layout">
@@ -66,20 +66,19 @@
 				</div>
 			</div>
 		</div>
-	   <div id="m_body" title="." data-options="region:'center',border:0" >
-	   	<div class="easyui-layout" data-options="fit:true">
-				<div id="m_list" data-options="region:'center',border:0"></div>
-				<div id="m_attribute" title="attribute" data-options="region:'south',split:true,border:0,collapsed:true,href:'template/torrent-attribute.html',cache:true"></div>
+	   	<div id="m_body" title="." data-options="region:'center',border:0" >
+		   	<div id="layout_body"  class="easyui-layout" data-options="fit:true">
+					<div id="m_list" data-options="region:'center',border:0"></div>
+					<div id="m_attribute" title="attribute" data-options="region:'south',split:true,border:0,collapsed:true,href:'template/torrent-attribute.html',cache:true"></div>
 			</div>
-	   </div>
+	   	</div>
 		<div id="m_statusbar" data-options="region:'south'">
 			<span id="status_alt_speed" style="display:none;">&nbsp;&nbsp;&nbsp;&nbsp;</span>
-			<span id="status_title_downloadspeed" class="iconlabel icon-down"></span><span id="status_downloadspeed"></span>
+			<span id="status_title_downloadspeed" class="iconlabel icon-down"></span>&nbsp;<span id="status_downloadspeed"></span>
 			<span class="button-split">|</span>
-			<span id="status_title_uploadspeed" class="iconlabel icon-up"></span><span id="status_uploadspeed"></span>
+			<span id="status_title_uploadspeed" class="iconlabel icon-up"></span>&nbsp;<span id="status_uploadspeed"></span>
 			<span class="button-split">|</span>
-			<span id="status_freespace"></span>
-			<span id="status_version" style="float:right;"></span>
+			<span id="status_freespace"></span><span id="status_version" style="float:right;"></span>
 		</div>
 		<div id="dropArea" class="dropArea" style="display:none;">
 			<span id="text-drop-title" style="position:absolute;top:150px;left:150px;font-size:40px;font-weight: bold;" disabled="disabled"></span>
